--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,7 @@
 main:
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
+  - title: "Events"
+    url: /events/
+  - title: "Members"
+    url: /members/
   - title: "About"
     url: /about/
