--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 #twitter_username: username
 github_username: IFIP-WG11-6
-minimal_mistakes_skin: default
-search: true
+minimal_mistakes_skin: dark
+#search: true
 
 # Build settings
 markdown: kramdown
@@ -93,4 +93,4 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
+      author_profile: true
