--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
     url: /events/
   - title: "Members"
     url: /members/
-  - title: "About"
-    url: /about/
+  - title: "Aims and Scope"
+    url: /aims_and_scope/
