--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,9 @@ author:
 #    - label: "Twitter"
 #      icon: "fab fa-fw fa-twitter-square"
 #      url: "https://twitter.com/"
+    - label: "eMail"
+      icon: "fas fa-fw fa-envelope-square"
+      url: "mailto:ifip-wg11.6@protonmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/ifip-wg11-6"
